objects/LLC_BI__Data_Source_Section__c.object
<CustomObject>
    <description>This object groups all data source items for a particular section of a data source. For example, in Data Recognition, it groups all the fields for a specific page of a supported form. The values in this object populate via data load.</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The system populates this field via data load. It indicates which section a data source item belongs to.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Name__c</fullName>
        <description>The system automatically populates this field with the name of the component in the external output.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Data_Source_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with a lookup ID to the Data Source Section object.</description>
        <label>Parent Data Source Section</label>
        <referenceTo>LLC_BI__Data_Source_Section__c</referenceTo>
        <relationshipLabel>Parent Data Source Section</relationshipLabel>
        <relationshipName>Parent_Data_Source_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with a lookup ID to the Data Source object.</description>
        <label>Data Source</label>
        <referenceTo>LLC_BI__Data_Source__c</referenceTo>
        <relationshipLabel>Data Source Sections</relationshipLabel>
        <relationshipName>Data_Source_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this required field with an unique id of the related object.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify if the data source section is optional on the data source.</description>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Source Section</label>
    <nameField>
        <label>Data Source Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Source Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>